# ColorSenseAI

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: description.md
.github/workflows/: ci.yml
config/: ml_features.json
dashboard/: index.html
dashboard/css/: modern-styles.css  styles.css
dashboard/js/: charts.js  colorscience.js  data.js  main.js  simulation.js  websocket.js
data/: colorsense.db  simulated_dashboard_data.csv
docs/: architecture.md  challenges_and_limitations.md  dashboard_guide.md  feature_extensions.md  gps_module.md  hardware_setup.md  product_requirement_docs.md  software_architecture.md  technical.md  technical_overview.md
simulators/: README.md  arduino_simulator.py  client_example.py  database_client.py  generate_dashboard_data.py
src/: __init__.py  main.py
src/api/: __init__.py
src/arduino/: main.ino  main_with_gps.ino
src/config/: ml_features.json
src/database/: __init__.py  db.py  operations.py  schema.py
src/ml/: __init__.py
src/services/: __init__.py  analysis.py  visualization.py
src/services/data_fusion/: __init__.py  sensor_fusion.py
src/services/ml/: __init__.py  adaptive_calibration.py  anomaly_detection.py  color_correction.py  data_manager.py  ml_feature_manager.py  ml_manager.py  sensor_optimization.py
src/utils/: __init__.py
supabase/: config.toml
virtual_arduino/: package-lock.json  package.json
virtual_arduino/src/: VirtualArduino.ts  index.ts
virtual_arduino/src/interfaces/: Sensors.ts
virtual_arduino/src/sensors/: AS7262.ts  SEN0611.ts  TSL2591.ts
