[tool.poetry]
name = "colorsenseai"
version = "0.1.0"
description = "AI-powered color analysis and manipulation tool"
authors = ["Arkadiusz Fudali"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.5"
urllib3 = "^2.4.0"
pillow = "^11.2.1"
httpx = "^0.28.1"
openai = "^1.75.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
